# cobalt-purestorage-credential-rotator

./: .dockerignore  .editorconfig  .env-sample  .gitignore  CODEOWNERS  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sample-config.yml
.github/workflows/: workflow.yml
cobalt_purestorage/: cli.py  configuration.py  k8s.py  logging_utils.py  pure_storage.py  rotator.py  smoketest.py
scripts/: check.sh  test.sh
src/pkg/: cli.py  config.py  k8s.py  pure_storage.py  rotator.py
tests/: conftest.py  test_cli.py  test_config.py  test_configuration.py  test_k8s.py  test_pure_storage.py  test_rotator.py
tests/fixtures/: config.yml  mock-data.yml
