[project]
name = "cobalt-purestorage"
description = "Python Package to rotate PureStorage FlashBlade Object Store Credentials"
authors = [
    { name = "Harrison AI", email = "platform@harrison.ai" }
    ]
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"

dependencies = [
    "click>=8.1.3",
    "py-pure-client>=1.29.0",
    "kubernetes>=25.3.0",
    "pydantic>=1.10.4",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "pycln>=2.1.3",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "requests-mock>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["cobalt_purestorage"]

[project.scripts]
rotate-fb-creds = "cobalt_purestorage.cli:rotate_entrypoint"
smoketest = "cobalt_purestorage.cli:smoketest_entrypoint"

[build-system]
requires = ["setuptools>=65.3.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "--log-cli-level=DEBUG",
    "--cov-report",
    "term-missing",
    "--cov=cobalt_purestorage/",
]
filterwarnings = ["ignore::pytest.PytestCacheWarning"]

[tool.coverage.run]
source = ["cobalt_purestorage"]

[tool.isort]
profile = "black"
